--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">friday 22/3/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">64 - 67 - 23 - 41 - 51</p>
-                <p class="machine">78 - 43 - 47 - 82 - 55</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">31 - 45 - 61 - 7 - 53</p>
-                <p class="machine">17 - 18 - 11 - 71 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">61 - 57 - 52 - 66 - 4</p>
-                <p class="machine">2 - 14 - 33 - 89 - 78</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">37 - 84 - 70 - 87 - 29</p>
-                <p class="machine">56 - 3 - 88 - 18 - 24</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">82 - 83 - 65 - 72 - 41</p>
-                <p class="machine">12 - 76 - 29 - 90 - 68</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">73 - 11 - 87 - 36 - 13</p>
-                <p class="machine">30 - 15 - 69 - 3 - 31</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">saturday 23/03/2024</h2>
             <article>
                 <h3 class="game">Premier</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">4 - 2 - 88 - 63 - 46</p>
                 <p class="machine">32 - 23 - 58 - 85 - 35</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">sunday 24/3/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">13 - 53 - 64 - 40 - 88</p>
+                <p class="machine">74 - 37 - 79 - 66 - 8</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">73 - 81 - 48 - 89 - 13</p>
+                <p class="machine">43 - 16 - 68 - 36 - 7</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">52 - 65 - 15 - 45 - 81</p>
+                <p class="machine">21 - 73 - 68 - 47 - 85</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">21 - 9 - 20 - 44 - 16</p>
+                <p class="machine">8 - 62 - 38 - 35 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">82 - 18 - 74 - 34 - 81</p>
+                <p class="machine">57 - 26 - 39 - 55 - 9</p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">84 - 33 - 60 - 77 - 82</p>
+                <p class="machine">32 - 44 - 46 - 6 - 22</p>        
             </article>
         </section>
     </div>
