--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">saturday 23/03/2024</h2>
-            <article>
-                <h3 class="game">Premier</h3>
-                <p class="winning">21 - 10 - 61 - 77 - 7</p>
-                <p class="machine">5 - 24 - 80 - 2 - 19</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">61 - 69 - 70 - 89 - 43</p>
-                <p class="machine">18 - 62 - 54 - 4 - 25</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">29 - 74 - 70 - 52 - 54</p>
-                <p class="machine">18 - 8 - 66 - 71 - 25</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">54 - 3 - 49 - 36 - 8</p>
-                <p class="machine">43 - 6 - 59 - 87 - 2</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">46 - 1 - 84 - 73 - 40</p>
-                <p class="machine">68 - 85 - 81 - 55 - 2</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">4 - 2 - 88 - 63 - 46</p>
-                <p class="machine">32 - 23 - 58 - 85 - 35</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">sunday 24/3/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">84 - 33 - 60 - 77 - 82</p>
                 <p class="machine">32 - 44 - 46 - 6 - 22</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">monday 25/3/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">40 - 79 - 11 - 38 - 78</p>
+                <p class="machine">33 - 29 - 71 - 49 - 2</p>        
+            </article>
+            <article>
+                <h3 class="game">Peoples</h3>
+                <p class="winning">64 - 88 - 4 - 84 - 23</p>
+                <p class="machine">72 - 89 - 59 - 51 - 28</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">35 - 37 - 46 - 16 - 68</p>
+                <p class="machine">87 - 48 - 86 - 69 - 83</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">48 - 35 - 20 - 65 - 1</p>
+                <p class="machine">58 - 66 - 3 - 74 - 41</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">85 - 42 - 15 - 70 - 13</p>
+                <p class="machine">32 - 54 - 41 - 3 - 77</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">81 - 24 - 79 - 15 - 29</p>
+                <p class="machine">60 - 57 - 27 - 46 - 2</p>        
             </article>
         </section>
     </div>
