--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">sunday 24/3/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">13 - 53 - 64 - 40 - 88</p>
-                <p class="machine">74 - 37 - 79 - 66 - 8</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">73 - 81 - 48 - 89 - 13</p>
-                <p class="machine">43 - 16 - 68 - 36 - 7</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">52 - 65 - 15 - 45 - 81</p>
-                <p class="machine">21 - 73 - 68 - 47 - 85</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">21 - 9 - 20 - 44 - 16</p>
-                <p class="machine">8 - 62 - 38 - 35 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">82 - 18 - 74 - 34 - 81</p>
-                <p class="machine">57 - 26 - 39 - 55 - 9</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">84 - 33 - 60 - 77 - 82</p>
-                <p class="machine">32 - 44 - 46 - 6 - 22</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">monday 25/3/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">International</h3>
                 <p class="winning">81 - 24 - 79 - 15 - 29</p>
                 <p class="machine">60 - 57 - 27 - 46 - 2</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">tuesday 26/3/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">46 - 44 - 5 - 52 - 62</p>
+                <p class="machine">82 - 67 - 55 - 3 - 19</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">51 - 50 - 44 - 90 - 40</p>
+                <p class="machine">41 - 38 - 36 - 3 - 85</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">76 - 88 - 9 - 40 - 35</p>
+                <p class="machine">77 - 15 - 42 - 10 - 64</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">18 - 41 - 57 - 76 - 22</p>
+                <p class="machine">61 - 51 - 33 - 64 - 8</p>        
+            </article>
+            <article>
+                <h3 class="game">LUCKY-G</h3>
+                <p class="winning">44 - 84 - 51 - 56 - 9</p>
+                <p class="machine">76 - 86 - 66 - 11 - 5</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">3 - 62 - 63 - 28 - 7</p>
+                <p class="machine">85 - 4 - 29 - 67 - 10</p>        
             </article>
         </section>
     </div>
