--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
     <!-- End Google Tag Manager (noscript) -->
     
         <header>
+            <div class="brand-container">
+                <div href="/" aria-current="page">
+                    <img src="https://i.postimg.cc/ZRkV6yrs/VLB-logo-e.png" alt="logo" id="home" >
+                </div>
+                <h1 class="visual-lotto-board">Visual Lotto Board</h1>
+            </div>
             <nav>
-                <ul>
-                    <li><a href="#" aria-current="page" class="home">HOME</a></li>                   
+                <h1 class="list-of-games">List of Games</h1>
+                <ul>                   
                     <li><a href="./GAMES/1Diamond.html" target="_blank">Diamond <sup>1</sup></a></li>
                     <li><a href="./GAMES/2People.html" target="_blank">People <sup>2</sup></a></li>
                     <li><a href="./GAMES/3Bingo.html" target="_blank">Bingo <sup>3</sup></a></li>
@@ -61,12 +67,12 @@
                     <li><a href="./GAMES/17Royal.html" target="_blank">Royal <sup>17</sup></a></li>
                     <li><a href="./GAMES/18MSP.html" target="_blank">MSP <sup>18</sup></a></li>
                     <li><a href="./GAMES/19LUCKY-G.html" target="_blank">LUCKY G <sup>19</sup></a></li>
-                    <li><a href="./GAMES/20Midweek.html" target="_blank">Midweek <sup>20</sup></a> </li>
-                    <li><a href="./GAMES/21Fortune.html" target="_blank">Fortune <sup>21</sup></a></li>
-                    <li><a href="./GAMES/22Bonanza.html" target="_blank">Bonanza <sup>22</sup></a></li>
+                    <li><a href="./GAMES/20Midweek.html" target="_blank">MIDWEEK <sup>20</sup></a> </li>
+                    <li><a href="./GAMES/21Fortune.html" target="_blank">FORTUNE <sup>21</sup></a></li>
+                    <li><a href="./GAMES/22Bonanza.html" target="_blank">BONANZA <sup>22</sup></a></li>
                     <li><a href="./GAMES/23King.html" target="_blank"> Premier King <sup>23</sup></a></li>
-                    <li><a href="./GAMES/24National.html" target="_blank">National <sup>24</sup></a></li>
-                    <li><a href="./GAMES/25Aseda.html" target="_blank">Aseda <sup>25</sup></a></li>
+                    <li><a href="./GAMES/24National.html" target="_blank">NATIONAL <sup>24</sup></a></li>
+                    <li><a href="./GAMES/25Aseda.html" target="_blank">ASEDA <sup>25</sup></a></li>
                 </ul>
                 <div class="navigation">
                     <a class="anchor dailyResult" href="./GAMES/dailyResult.html"  id="dailyResult"></i>Check Day Result</a>
@@ -77,7 +83,7 @@
                 </div> 
             </nav>
         </header>
-        <div class="review-box" style="display: flex; flex-direction: column; justify-content: center; align-items: center; border: 1px solid #00000015; min-width: 320px; border-radius: 5px; margin: 10px; padding: 20px 0; background-color: aliceblue;">
+        <div class="review-box" style="display: flex; flex-direction: column; justify-content: center; align-items: center; border: 1px solid #00000015; min-width: 310px; border-radius: 5px; margin: 10px; padding: 20px 0; background-color: aliceblue;">
             <aside class="review" style="text-align: center; line-height: 1.5;" >
                 <h1>Review</h1>
                 <p style="font-size: 20px;">Kindly take few seconds of your time to rate our content</p>
@@ -203,11 +209,11 @@
 
                         <!-- footer-->
         <footer>
-            <p>Created & Manage <br> By <br> Hologuti Business Centre</p>
-            <a href="https://hologutibusinesscentre.com" target="_blank"><img src="https://i.postimg.cc/wjq0TBDq/of-HBC-Logo.webp" width="100px" aria-hidden="true"></a>
+            <!-- <p>Created & Manage <br> By <br> Hologuti Business Centre</p>
+            <a href="/"><img src="https://i.postimg.cc/ZRkV6yrs/VLB-logo-e.png" alt="logo" width="100px" aria-hidden="true"></a> -->
             <!-- <span>&copy;2023 Hologuti Business Centre - All Rights Reserved</span>   -->
             <div class="contentInfo-wrapper">
-                <a href="#" class="team">Team</a>
+                <!-- <a href="#" class="team">Team</a> -->
 
                 <div class="getInTouch">
                     <span class="span in-touch">Get in Touch</span>
@@ -221,6 +227,9 @@
                         <a href="https://www.facebook.com/visuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-facebook"  aria-level="connect on our facebook Page"></i></a>
                         <a href="https://m.me/109930914660224" target="_blank" class="icon"><i class="fa-brands fa-facebook-messenger"  aria-label="connect on Messenger handle to Chat Us"></i></a>
                     </div> 
+                </div>
+                <div class="developer">
+                    <a href="https://hologutibusinesscentre.com/page/about">Developer</a>
                 </div>
             </div>
         </footer>
