--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">monday 25/3/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">40 - 79 - 11 - 38 - 78</p>
-                <p class="machine">33 - 29 - 71 - 49 - 2</p>        
-            </article>
-            <article>
-                <h3 class="game">Peoples</h3>
-                <p class="winning">64 - 88 - 4 - 84 - 23</p>
-                <p class="machine">72 - 89 - 59 - 51 - 28</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">35 - 37 - 46 - 16 - 68</p>
-                <p class="machine">87 - 48 - 86 - 69 - 83</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">48 - 35 - 20 - 65 - 1</p>
-                <p class="machine">58 - 66 - 3 - 74 - 41</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">85 - 42 - 15 - 70 - 13</p>
-                <p class="machine">32 - 54 - 41 - 3 - 77</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">81 - 24 - 79 - 15 - 29</p>
-                <p class="machine">60 - 57 - 27 - 46 - 2</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">tuesday 26/3/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Super</h3>
                 <p class="winning">3 - 62 - 63 - 28 - 7</p>
                 <p class="machine">85 - 4 - 29 - 67 - 10</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">tuesday 27/3/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">2 - 68 - 14 - 65 - 35</p>
+                <p class="machine">89 - 55 - 10 - 23 - 84</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">80 - 19 - 24 - 52 - 50</p>
+                <p class="machine">23 - 34 - 15 - 65 - 62</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">8 - 72 - 76 - 81 - 58</p>
+                <p class="machine">52 - 77 - 23 - 85 - 29</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">70 - 88 - 10 - 72 - 1</p>
+                <p class="machine">67 - 68 - 87 - 24 - 12</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">39 - 86 - 3 - 5 - 53</p>
+                <p class="machine">79 - 21 - 19 - 60 - 27</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">69 - 63 - 23 - 36 - 33</p>
+                <p class="machine">30 - 72 - 70 - 37 - 48</p>        
             </article>
         </section>
     </div>
