--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">tuesday 26/3/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">46 - 44 - 5 - 52 - 62</p>
-                <p class="machine">82 - 67 - 55 - 3 - 19</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">51 - 50 - 44 - 90 - 40</p>
-                <p class="machine">41 - 38 - 36 - 3 - 85</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">76 - 88 - 9 - 40 - 35</p>
-                <p class="machine">77 - 15 - 42 - 10 - 64</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">18 - 41 - 57 - 76 - 22</p>
-                <p class="machine">61 - 51 - 33 - 64 - 8</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY-G</h3>
-                <p class="winning">44 - 84 - 51 - 56 - 9</p>
-                <p class="machine">76 - 86 - 66 - 11 - 5</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">3 - 62 - 63 - 28 - 7</p>
-                <p class="machine">85 - 4 - 29 - 67 - 10</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">tuesday 27/3/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Lucky</h3>
                 <p class="winning">69 - 63 - 23 - 36 - 33</p>
                 <p class="machine">30 - 72 - 70 - 37 - 48</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">thursday 28/3/2024</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">69 - 27 - 18 - 47 - 59</p>
+                <p class="machine">76 - 87 - 90 - 88 - 48</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">8 - 7 - 32 - 76 - 75</p>
+                <p class="machine">20 - 22 - 30 - 62 - 54</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">41 - 22 - 64 - 81 - 14</p>
+                <p class="machine">23 - 45 - 49 - 5 - 87</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">75 - 52 - 37 - 62 - 27</p>
+                <p class="machine">11 - 31 - 20 - 40 - 86</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">29 - 69 - 56 - 33 - 32</p>
+                <p class="machine">81 - 66 - 79 - 89 - 10</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">15 - 20 - 85 - 55 - 31</p>
+                <p class="machine">29 - 53 - 4 - 49 - 52</p>        
             </article>
         </section>
     </div>
