--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">tuesday 27/3/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">2 - 68 - 14 - 65 - 35</p>
-                <p class="machine">89 - 55 - 10 - 23 - 84</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">80 - 19 - 24 - 52 - 50</p>
-                <p class="machine">23 - 34 - 15 - 65 - 62</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">8 - 72 - 76 - 81 - 58</p>
-                <p class="machine">52 - 77 - 23 - 85 - 29</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">70 - 88 - 10 - 72 - 1</p>
-                <p class="machine">67 - 68 - 87 - 24 - 12</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">39 - 86 - 3 - 5 - 53</p>
-                <p class="machine">79 - 21 - 19 - 60 - 27</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">69 - 63 - 23 - 36 - 33</p>
-                <p class="machine">30 - 72 - 70 - 37 - 48</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">thursday 28/3/2024</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -262,6 +228,41 @@
                 <h3 class="game">Bingo</h3>
                 <p class="winning">15 - 20 - 85 - 55 - 31</p>
                 <p class="machine">29 - 53 - 4 - 49 - 52</p>        
+            </article>
+        </section>
+
+                                
+        <section aria-label="yesterday result">
+            <h2 class="date">friday 29/3/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">63 - 2 - 55 - 33 - 56</p>
+                <p class="machine">32 - 80 - 8 - 28 - 11</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">89 - 1 - 28 - 87 - 7</p>
+                <p class="machine">23 - 59 - 75 - 21 - 54</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">39 - 38 - 56 - 7 - 34</p>
+                <p class="machine">42 - 75 - 37 - 63 - 35</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">36 - 59 - 29 - 88 - 8</p>
+                <p class="machine">82 - 65 - 46 - 66 - 22</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">2 - 59 - 10 - 21 - 22</p>
+                <p class="machine">6 - 48 - 40 - 84 - 46</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
