meta for counter part

--- a/classification.html
+++ b/classification.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Baba Ijebu (premier lotto) classification chart">
+    <meta name="keywords" content="Baba Ijebu classification chart, Premier lotto classification chart, counterpart">
     <title>Visual Lotto Board | Classification Chart</title>
 
     <meta property="og:title" content="Classification Chart">
