--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,41 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">thursday 28/3/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">69 - 27 - 18 - 47 - 59</p>
-                <p class="machine">76 - 87 - 90 - 88 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">8 - 7 - 32 - 76 - 75</p>
-                <p class="machine">20 - 22 - 30 - 62 - 54</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">41 - 22 - 64 - 81 - 14</p>
-                <p class="machine">23 - 45 - 49 - 5 - 87</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">75 - 52 - 37 - 62 - 27</p>
-                <p class="machine">11 - 31 - 20 - 40 - 86</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">29 - 69 - 56 - 33 - 32</p>
-                <p class="machine">81 - 66 - 79 - 89 - 10</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">15 - 20 - 85 - 55 - 31</p>
-                <p class="machine">29 - 53 - 4 - 49 - 52</p>        
-            </article>
-        </section>
-
-                                
-        <section aria-label="yesterday result">
             <h2 class="date">friday 29/3/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -263,6 +228,45 @@
                 <h3 class="game"></h3>
                 <p class="winning"></p>
                 <p class="machine"></p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">saturday 30/3/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">66 - 52 - 50 - 89 - 9</p>
+                <p class="machine">27 - 77 - 40 - 90 - 35</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">68 - 31 - 88 - 19 - 12</p>
+                <p class="machine">76 - 33 - 4 - 32 - 30</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">80 - 69 - 5 - 16 - 75</p>
+                <p class="machine">49 - 67 - 81 - 55 - 11</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">90 - 71 - 63 - 31 - 8</p>
+                <p class="machine">44 - 89 - 50 - 15 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">20 - 68 - 69 - 24 - 82</p>
+                <p class="machine">6 - 52 - 35 - 27 - 90</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">14 - 37 - 5 - 29 - 88</p>
+                <p class="machine">40 - 8 - 27 - 71 - 21</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">75 - 4 - 26 - 24 - 21</p>
+                <p class="machine">64 - 7 - 5 - 16 - 30</p>        
             </article>
         </section>
     </div>
