--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">friday 29/3/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">63 - 2 - 55 - 33 - 56</p>
-                <p class="machine">32 - 80 - 8 - 28 - 11</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">89 - 1 - 28 - 87 - 7</p>
-                <p class="machine">23 - 59 - 75 - 21 - 54</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">39 - 38 - 56 - 7 - 34</p>
-                <p class="machine">42 - 75 - 37 - 63 - 35</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">36 - 59 - 29 - 88 - 8</p>
-                <p class="machine">82 - 65 - 46 - 66 - 22</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">2 - 59 - 10 - 21 - 22</p>
-                <p class="machine">6 - 48 - 40 - 84 - 46</p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">saturday 30/3/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -267,6 +233,40 @@
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">75 - 4 - 26 - 24 - 21</p>
                 <p class="machine">64 - 7 - 5 - 16 - 30</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">sunday 31/3/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">30 - 37 - 47 - 41 - 56</p>
+                <p class="machine">13 - 84 - 21 - 28 - 75</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">34 - 58 - 44 - 25 - 75</p>
+                <p class="machine">16 - 47 - 83 - 17 - 10</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">16 - 67 - 73 - 10 - 79</p>
+                <p class="machine">72 - 56 - 64 - 33 - 35</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">59 - 40 - 32 - 2 - 57</p>
+                <p class="machine">16 - 54 - 36 - 29 - 1</p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">82 - 59 - 1 - 86 - 69</p>
+                <p class="machine">22 - 9 - 5 - 76 - 19</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
