--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -638,16 +638,16 @@
                 
                     <!-- winning-->
                     <td class="winning"></td>
+                    <td class="winning"></td>
                     <td class="winning">N</td>
                     <td class="winning">O</td>
-                    <td class="winning">T</td>
                     <td class="winning" id="lbw"></td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine">Y</td>
-                    <td class="machine">E</td>
-                    <td class="machine">T</td>
+                    <td class="machine" id="fbm">D</td>
+                    <td class="machine">R</td>
+                    <td class="machine">A</td>
+                    <td class="machine">W</td>
                     <td class="machine" id="lbm"></td>
                 </tr>
             </tbody>
