--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -643,20 +643,20 @@
             <tbody>
                 <tr>
                     <td class="serial-num">14</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>April 1st</small></td>
                 
                     <!-- winning-->
                     <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
+                    <td class="winning">N</td>
+                    <td class="winning">O</td>
+                    <td class="winning">T</td>
                     <td class="winning" id="lbw"></td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
+                    <td class="machine">Y</td>
+                    <td class="machine">E</td>
+                    <td class="machine">T</td>
                     <td class="machine" id="lbm"></td>
                 </tr>
             </tbody>
