--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,45 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">saturday 30/3/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">66 - 52 - 50 - 89 - 9</p>
-                <p class="machine">27 - 77 - 40 - 90 - 35</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">68 - 31 - 88 - 19 - 12</p>
-                <p class="machine">76 - 33 - 4 - 32 - 30</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">80 - 69 - 5 - 16 - 75</p>
-                <p class="machine">49 - 67 - 81 - 55 - 11</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">90 - 71 - 63 - 31 - 8</p>
-                <p class="machine">44 - 89 - 50 - 15 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">20 - 68 - 69 - 24 - 82</p>
-                <p class="machine">6 - 52 - 35 - 27 - 90</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">14 - 37 - 5 - 29 - 88</p>
-                <p class="machine">40 - 8 - 27 - 71 - 21</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">75 - 4 - 26 - 24 - 21</p>
-                <p class="machine">64 - 7 - 5 - 16 - 30</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">sunday 31/3/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -262,6 +223,40 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">82 - 59 - 1 - 86 - 69</p>
                 <p class="machine">22 - 9 - 5 - 76 - 19</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">monday 01/4/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">48 - 73 - 10 - 24 - 29</p>
+                <p class="machine">55 - 7 - 65 - 89 - 83</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">9 - 29 - 36 - 17 - 28</p>
+                <p class="machine">82 - 37 - 76 - 38 - 18</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">51 - 19 - 24 - 85 - 40</p>
+                <p class="machine">62 - 79 - 77 - 4 - 27</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">64 - 19 - 6 - 22 - 63</p>
+                <p class="machine">81 - 34 - 30 - 2 - 40</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">76 - 16 - 38 - 67 - 79</p>
+                <p class="machine">5 - 13 - 40 - 68 - 2</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
