--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">sunday 31/3/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">30 - 37 - 47 - 41 - 56</p>
-                <p class="machine">13 - 84 - 21 - 28 - 75</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">34 - 58 - 44 - 25 - 75</p>
-                <p class="machine">16 - 47 - 83 - 17 - 10</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">16 - 67 - 73 - 10 - 79</p>
-                <p class="machine">72 - 56 - 64 - 33 - 35</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">59 - 40 - 32 - 2 - 57</p>
-                <p class="machine">16 - 54 - 36 - 29 - 1</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">82 - 59 - 1 - 86 - 69</p>
-                <p class="machine">22 - 9 - 5 - 76 - 19</p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">monday 01/4/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -262,6 +228,45 @@
                 <h3 class="game"></h3>
                 <p class="winning"></p>
                 <p class="machine"></p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">tuesday 02/4/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">31 - 66 - 83 - 9 - 49</p>
+                <p class="machine">11 - 67 - 55 - 41 - 44</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">74 - 23 - 18 - 2 - 84</p>
+                <p class="machine">24 - 47 - 30 - 10 - 53</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">5 - 41 - 75 - 9 - 7</p>
+                <p class="machine">67 - 40 - 14 - 22 - 46</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">54 - 3 - 17 - 27 - 65</p>
+                <p class="machine">63 - 83 - 60 - 15 - 44</p>        
+            </article>
+            <article>
+                <h3 class="game">LUCKY-G</h3>
+                <p class="winning">9 - 60 - 30 - 77 - 85</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">29 - 16 - 33 - 43 - 24</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">68 - 3 - 79 - 21 - 76</p>
+                <p class="machine">59 - 31 - 40 - 16 - 57</p>        
             </article>
         </section>
     </div>
