--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -261,7 +261,7 @@
             <article>
                 <h3 class="game">MSP</h3>
                 <p class="winning">29 - 16 - 33 - 43 - 24</p>
-                <p class="machine"></p>        
+                <p class="machine">52 - 28 - 63 - 54 - 60</p>        
             </article>
             <article>
                 <h3 class="game">Super</h3>
