--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -653,11 +653,11 @@
                     <td class="winning" id="lbw">24</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">52</td>
+                    <td class="machine">28</td>
+                    <td class="machine">63</td>
+                    <td class="machine">54</td>
+                    <td class="machine" id="lbm">60</td>
                 </tr>
             </tbody>
 
