--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -655,11 +655,11 @@
                     <td class="winning" id="lbw">85</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">45</td>
+                    <td class="machine">67</td>
+                    <td class="machine">7</td>
+                    <td class="machine">72</td>
+                    <td class="machine" id="lbm">73</td>
                 </tr>
             </tbody>
 
