--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -643,14 +643,14 @@
             <tbody>
                 <tr>
                     <td class="serial-num">14</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>April 3rd</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">27</td>
+                    <td class="winning">25</td>
+                    <td class="winning">11</td>
+                    <td class="winning">72</td>
+                    <td class="winning" id="lbw">90</td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
