--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">monday 01/4/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">48 - 73 - 10 - 24 - 29</p>
-                <p class="machine">55 - 7 - 65 - 89 - 83</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">9 - 29 - 36 - 17 - 28</p>
-                <p class="machine">82 - 37 - 76 - 38 - 18</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">51 - 19 - 24 - 85 - 40</p>
-                <p class="machine">62 - 79 - 77 - 4 - 27</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">64 - 19 - 6 - 22 - 63</p>
-                <p class="machine">81 - 34 - 30 - 2 - 40</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">76 - 16 - 38 - 67 - 79</p>
-                <p class="machine">5 - 13 - 40 - 68 - 2</p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">tuesday 02/4/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -256,7 +222,7 @@
             <article>
                 <h3 class="game">LUCKY-G</h3>
                 <p class="winning">9 - 60 - 30 - 77 - 85</p>
-                <p class="machine"></p>        
+                <p class="machine">45 - 67 - 7 - 72 - 73</p>        
             </article>
             <article>
                 <h3 class="game">MSP</h3>
@@ -267,6 +233,40 @@
                 <h3 class="game">Super</h3>
                 <p class="winning">68 - 3 - 79 - 21 - 76</p>
                 <p class="machine">59 - 31 - 40 - 16 - 57</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">wednesday 03/4/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">47 - 61 - 83 - 86 - 30</p>
+                <p class="machine">41 - 14 - 15 - 80 - 79</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">72 - 22 - 3 - 50 - 43</p>
+                <p class="machine">66 - 84 - 32 - 10 - 31</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">40 - 46 - 1 - 36 - 29</p>
+                <p class="machine">16 - 13 - 81 - 2 - 22</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">36 - 70 - 4 - 26 - 12</p>
+                <p class="machine">22 - 89 - 75 - 27 - 24</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">27 - 25 - 11 - 72 - 90</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">64 - 59 - 14 - 34 - 88</p>
+                <p class="machine">41 - 6 - 63 - 15 - 82</p>        
             </article>
         </section>
     </div>
