--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -644,14 +644,14 @@
             <tbody>
                 <tr>
                     <td class="serial-num">14</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>April 4th</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">28</td>
+                    <td class="winning">84</td>
+                    <td class="winning">75</td>
+                    <td class="winning">21</td>
+                    <td class="winning" id="lbw">43</td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
