--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,45 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">tuesday 02/4/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">31 - 66 - 83 - 9 - 49</p>
-                <p class="machine">11 - 67 - 55 - 41 - 44</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">74 - 23 - 18 - 2 - 84</p>
-                <p class="machine">24 - 47 - 30 - 10 - 53</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">5 - 41 - 75 - 9 - 7</p>
-                <p class="machine">67 - 40 - 14 - 22 - 46</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">54 - 3 - 17 - 27 - 65</p>
-                <p class="machine">63 - 83 - 60 - 15 - 44</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY-G</h3>
-                <p class="winning">9 - 60 - 30 - 77 - 85</p>
-                <p class="machine">45 - 67 - 7 - 72 - 73</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">29 - 16 - 33 - 43 - 24</p>
-                <p class="machine">52 - 28 - 63 - 54 - 60</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">68 - 3 - 79 - 21 - 76</p>
-                <p class="machine">59 - 31 - 40 - 16 - 57</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">wednesday 03/4/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -261,12 +222,46 @@
             <article>
                 <h3 class="game">Midweek</h3>
                 <p class="winning">27 - 25 - 11 - 72 - 90</p>
-                <p class="machine"></p>        
+                <p class="machine">58 - 18 - 6 - 84 - 85</p>        
             </article>
             <article>
                 <h3 class="game">Lucky</h3>
                 <p class="winning">64 - 59 - 14 - 34 - 88</p>
                 <p class="machine">41 - 6 - 63 - 15 - 82</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date"></h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">8 - 33 - 38 - 69 - 9</p>
+                <p class="machine">45 - 37 - 39 - 11 - 70</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">16 - 26 - 6 - 53 - 64</p>
+                <p class="machine">60 - 5 - 12 - 30 - 18</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">19 - 71 - 56 - 76 - 72</p>
+                <p class="machine">5 - 17 - 1 - 64 - 29</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">51 - 7 - 59 - 10 - 17</p>
+                <p class="machine">1 - 42 - 16 - 34 - 33</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">28 - 84 - 75 - 21 - 43</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">21 - 19 - 51 - 27 - 83</p>
+                <p class="machine">54 - 57 - 18 - 43 - 49</p>        
             </article>
         </section>
     </div>
