--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -197,42 +197,8 @@
         </nav>
     </header>
     <div class="gameResults">
-        <section aria-label="two days ago result">
-            <h2 class="date">wednesday 03/4/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">47 - 61 - 83 - 86 - 30</p>
-                <p class="machine">41 - 14 - 15 - 80 - 79</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">72 - 22 - 3 - 50 - 43</p>
-                <p class="machine">66 - 84 - 32 - 10 - 31</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">40 - 46 - 1 - 36 - 29</p>
-                <p class="machine">16 - 13 - 81 - 2 - 22</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">36 - 70 - 4 - 26 - 12</p>
-                <p class="machine">22 - 89 - 75 - 27 - 24</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">27 - 25 - 11 - 72 - 90</p>
-                <p class="machine">58 - 18 - 6 - 84 - 85</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">64 - 59 - 14 - 34 - 88</p>
-                <p class="machine">41 - 6 - 63 - 15 - 82</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
-            <h2 class="date"></h2>
+        <section aria-label="two days ago results">
+            <h2 class="date">thursday 04/4/2024</h2>
             <article>
                 <h3 class="game">People</h3>
                 <p class="winning">8 - 33 - 38 - 69 - 9</p>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">Fortune</h3>
                 <p class="winning">28 - 84 - 75 - 21 - 43</p>
-                <p class="machine"></p>        
+                <p class="machine">37 - 64 - 90 - 33 - 80</p>        
             </article>
             <article>
                 <h3 class="game">Bingo</h3>
                 <p class="winning">21 - 19 - 51 - 27 - 83</p>
                 <p class="machine">54 - 57 - 18 - 43 - 49</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">friday 05/4/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">31 - 2 - 32 - 26 - 10</p>
+                <p class="machine">77 - 50 - 67 - 20 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">8 - 6 - 33 - 67 - 57</p>
+                <p class="machine">62 - 48 - 79 - 4 - 23</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">39 - 37 - 21 - 80 - 47</p>
+                <p class="machine">87 - 77 - 66 - 48 - 19</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">73 - 70 - 56 - 26 - 18</p>
+                <p class="machine">36 - 28 - 33 - 57 - 72</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">39 - 75 - 78 - 33 - 1</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">28 - 82 - 44 - 65 - 87</p>
+                <p class="machine">27 - 71 - 38 - 58 - 68</p>        
             </article>
         </section>
     </div>
