--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -648,14 +648,15 @@
                     <td class="winning" id="lbw">1</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">43</td>
+                    <td class="machine">3</td>
+                    <td class="machine">7</td>
+                    <td class="machine">4</td>
+                    <td class="machine" id="lbm">67</td>
                 </tr>
             </tbody>
 
+                                    <!-- day15-->
             <tbody>
                 <tr>
                     <td class="serial-num">15</td>
