--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago results">
-            <h2 class="date">thursday 04/4/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">8 - 33 - 38 - 69 - 9</p>
-                <p class="machine">45 - 37 - 39 - 11 - 70</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">16 - 26 - 6 - 53 - 64</p>
-                <p class="machine">60 - 5 - 12 - 30 - 18</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">19 - 71 - 56 - 76 - 72</p>
-                <p class="machine">5 - 17 - 1 - 64 - 29</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">51 - 7 - 59 - 10 - 17</p>
-                <p class="machine">1 - 42 - 16 - 34 - 33</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">28 - 84 - 75 - 21 - 43</p>
-                <p class="machine">37 - 64 - 90 - 33 - 80</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">21 - 19 - 51 - 27 - 83</p>
-                <p class="machine">54 - 57 - 18 - 43 - 49</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">friday 05/4/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">Bonanza</h3>
                 <p class="winning">39 - 75 - 78 - 33 - 1</p>
-                <p class="machine"></p>        
+                <p class="machine">43 - 3 - 7 - 4 - 67</p>        
             </article>
             <article>
                 <h3 class="game">vag</h3>
                 <p class="winning">28 - 82 - 44 - 65 - 87</p>
                 <p class="machine">27 - 71 - 38 - 58 - 68</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">saturday 06/4/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">85 - 40 - 48 - 54 - 49</p>
+                <p class="machine">71 - 5 - 23 - 7 - 26</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">78 - 14 - 62 - 65 - 47</p>
+                <p class="machine">11 - 1 - 73 - 67 - 64</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">14 - 87 - 63 - 65 - 64</p>
+                <p class="machine">76 - 39 - 41 - 19 - 22</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">66 - 12 - 19 - 78 - 22</p>
+                <p class="machine">79 - 85 - 24 - 76 - 5</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">81 - 19 - 29 - 3 - 22</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">80 - 76 - 89 - 52 - 61</p>
+                <p class="machine">34 - 9 - 8 - 12 - 44</p>        
             </article>
         </section>
     </div>
