--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago results">
-            <h2 class="date">friday 05/4/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">31 - 2 - 32 - 26 - 10</p>
-                <p class="machine">77 - 50 - 67 - 20 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">8 - 6 - 33 - 67 - 57</p>
-                <p class="machine">62 - 48 - 79 - 4 - 23</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">39 - 37 - 21 - 80 - 47</p>
-                <p class="machine">87 - 77 - 66 - 48 - 19</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">73 - 70 - 56 - 26 - 18</p>
-                <p class="machine">36 - 28 - 33 - 57 - 72</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">39 - 75 - 78 - 33 - 1</p>
-                <p class="machine">43 - 3 - 7 - 4 - 67</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">28 - 82 - 44 - 65 - 87</p>
-                <p class="machine">27 - 71 - 38 - 58 - 68</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">saturday 06/4/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">80 - 76 - 89 - 52 - 61</p>
                 <p class="machine">34 - 9 - 8 - 12 - 44</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">sunday 7/4/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">48 - 60 - 63 - 79 - 31</p>
+                <p class="machine">72 - 35 - 46 - 82 - 49</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">23 - 4 - 63 - 74 - 17</p>
+                <p class="machine">52 - 61 - 39 - 43 - 62</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">37 - 56 - 85 - 25 - 82</p>
+                <p class="machine">45 - 77 - 32 - 55 - 48</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">13 - 49 - 11 - 61 - 64</p>
+                <p class="machine">6 - 32 - 18 - 75 - 30</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">81 - 51 - 74 - 32 - 87</p>
+                <p class="machine">38 - 57 - 55 - 30 - 77</p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">70 - 86 - 54 - 31 - 76</p>
+                <p class="machine">61 - 71 - 25 - 63 - 15</p>        
             </article>
         </section>
     </div>
