--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -647,11 +647,11 @@
                     <td class="winning" id="lbw">22</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">80</td>
+                    <td class="machine">67</td>
+                    <td class="machine">62</td>
+                    <td class="machine">61</td>
+                    <td class="machine" id="lbm">28</td>
                 </tr>
             </tbody>
 
