--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago results">
-            <h2 class="date">saturday 06/4/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">85 - 40 - 48 - 54 - 49</p>
-                <p class="machine">71 - 5 - 23 - 7 - 26</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">78 - 14 - 62 - 65 - 47</p>
-                <p class="machine">11 - 1 - 73 - 67 - 64</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">14 - 87 - 63 - 65 - 64</p>
-                <p class="machine">76 - 39 - 41 - 19 - 22</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">66 - 12 - 19 - 78 - 22</p>
-                <p class="machine">79 - 85 - 24 - 76 - 5</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">81 - 19 - 29 - 3 - 22</p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">80 - 76 - 89 - 52 - 61</p>
-                <p class="machine">34 - 9 - 8 - 12 - 44</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">sunday 7/4/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">70 - 86 - 54 - 31 - 76</p>
                 <p class="machine">61 - 71 - 25 - 63 - 15</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">monday 8/4/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">18 - 27 - 8 - 41 - 62</p>
+                <p class="machine">31 - 76 - 6 - 16 - 1</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">28 - 15 - 51 - 87 - 5</p>
+                <p class="machine">62 - 45 - 32 - 67 - 89</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">62 - 40 - 17 - 83 - 6</p>
+                <p class="machine">14 - 47 - 76 - 39 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">63 - 56 - 4 - 39 - 83</p>
+                <p class="machine">29 - 60 - 15 - 64 - 25</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">46 - 70 - 16 - 53 - 69</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">82 - 28 - 68 - 89 - 71</p>
+                <p class="machine">70 - 24 - 45 - 31 - 7</p>        
             </article>
         </section>
     </div>
